[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 2 - Pre-Alpha", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "CXI liquid jet positioning feedback and tracking"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies", "optional-dependencies",]
keywords = []
name = "jet_tracking"
requires-python = ">=3.9"
[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE.md"

[project.scripts]
jet-tracking = "jet_tracking.main:main"

[tool.pytest.ini_options]
addopts = "--cov=."

[tool.setuptools_scm]
write_to = "jet_tracking/_version.py"

[tool.flake8]
exclude = "versioneer.py, jet_tracking/_version.py, docs/*"

[tool.isort]
known_first_party = "jet_tracking, pcdsdevices"
default_section = "THIRDPARTY"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "jet_tracking*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"
